packages/truffle/test/sources/migrations/error/contracts/Abstract.sol
pragma solidity ^0.4.4;

contract Abstract {
  function method() public;
}

